# Brand-New-Computer-Vision-Repo.-2020---2021-

./: CMakeLists.txt  README.md  SUMMARY.md  config.json  environment-setup.md  main.cpp  tutorial.json
AutoAim/Armor/: Armor.cpp  Armor.h  Aromor.cpp  Aromor.h
AutoAim/Detector/: Detector.cpp  Detector.h
Camera/: Camera_sdk.cpp  Camera_sdk.h
Commuication/: commuication.cpp  commuication.h
Communication/: communication.cpp  communication.h
Config/: Config_reader.cpp  Config_reader.h
Config/include/rapidjson/: allocators.h  document.h  memorybuffer.h  pointer.h  reader.h  schema.h  stringbuffer.h  uri.h  writer.h
Config/include/rapidjson/error/: error.h
Config/include/rapidjson/internal/: biginteger.h  clzll.h  diyfp.h  ieee754.h  itoa.h  meta.h  pow10.h  regex.h  stack.h  strfunc.h  swap.h
Documentation/: README.md
PowerRune/PowerRuneDetector/: PowerRuneDetector.cpp  PowerRuneDetector.h  README.md  detect_powerrune.cpp  detect_powerrune_class.cpp
PowerRune/powerruneTest/: detect_powerrune_class.cpp
ThreadManagement/: threadManagement.cpp  threadManagement.h
Utility/: exceptions.h  utility.cpp  utility.h
doc/: Makefile  cmake_install.cmake
documentation/: threadmanagement.md
documentation/autoaim/: README.md  armor.md  detector.md
documentation/powerrune/: README.md  powerrunedetector.md
example/: Makefile  cmake_install.cmake
googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/perftest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/unittest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
